[tool.poetry]
name = "streamingprovider-resolver"
version = "1.0.0"
description = ""
authors = ["Torben Carstens <git@carstens.tech>"]
license = "MIT"
readme = "README.md"
packages = [{include = "streamingprovider", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.2"
beautifulsoup4 = "^4.12.2"
lxml = "^5.0.0"
thefuzz = "^0.20.0"
python-levenshtein = "^0.23.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
mypy = "^1.0.0"
pytest = "^7.4.0"
ruff = "^0.1.7"

[tool.poetry.group.types.dependencies]
types-beautifulsoup4 = "4.12.0.20240106"
types-html5lib = "1.1.11.20240106"
types-PyYAML = "6.0.12.12"
types-ujson = "5.9.0.0"
typing_extensions = "4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "thefuzz.*"
ignore_missing_imports = true
